--- a/io/netcdf/snctools/README
+++ b/io/netcdf/snctools/README
@@ -1,5 +1,7 @@
 The Short And Sweet Of It...
 +-----------------------------------------------------------------------
+NetCDF-4 support is added as of R2010b.
+
 Please add this directory to your matlab path.  You must also have 
 mexnc on your path in order for snctools to work.
 
@@ -11,15 +13,23 @@ MATLAB versions below R14.
 SNCTOOLS Preferences
 
 USE_JAVA 
-    If you have the toolsUI jar file on your javapath, then enabling
-    this preference allows the java backend to work.  You may find this
-    useful in reading OPeNDAP URLs, GRIB2 files, or netCDF-4 files 
-    (see below).  
-    
-        setpref('SNCTOOLS','USE_JAVA',true);
+    If you wish to enable the netcdf-java backend (useful
+    for reading OPeNDAP URLs, GRIB2 files, netCDF-4 files, and
+    others), then this preference must be turned on.  First, go to
+    http://www.unidata.ucar.edu/software/netcdf-java/ and make sure you
+    download version 4.2 or higher.  Add the jar file to your MATLAB
+    path with
 
-    If you wish to use an opendap-enabled version of mexnc, you should
-    set this preference to false.
+        >> javaaddpath ( '/path/to/netcdfAll-4.1.jar' );
+
+    You should then turn on the preference.
+    
+        >> setpref('SNCTOOLS','USE_JAVA',true);
+
+    If you need to access password-protected OPeNDAP resources, you will
+    need one more addition to your javapath, i.e.
+
+        >> javaaddpath ( '/path/to/snctools/classes' );
 
 PRESERVE_FVD
     Way back in the old days, when mexnc/mexcdf was the only game
@@ -34,7 +44,7 @@ PRESERVE_FVD
     it really isn't necessary in all cases.  SNCTOOLS can be told to
     not transpose data by setting the PRESERVE_FVD preference
 
-    >> setpref('SNCTOOLS','PRESERVE_FVD',true);
+        >> setpref('SNCTOOLS','PRESERVE_FVD',true);
 
     By default this preference is false.  If you set it to true,
     you may see a big performance boost for large datasets, but you
@@ -42,33 +52,41 @@ PRESERVE_FVD
     to be permuted to row-major order, so you need to be careful
     when using this.
 
+USE_STD_HDF4_SCALING 
+    The CF conventions differ from HDF4 in how scale factors are
+    to be applied; check their respective references for details.
+    By default, HDF4 datasets are scaled according to CF conventions,
+    but setting this preference to true forces NC_VARGET to use
+    standard HDF4 conventions.  This preference is only useful when
+	reading HDF4 data (obviously), it has no effect upon netCDF I/O.
 
 +-----------------------------------------------------------------------
 SNCTOOLS and NetCDF-4
 
 SNCTOOLS supports netCDF-4 files under certain conditions...
 
-If you have a netcdf4-enabled mexnc mex-file, SNCTOOLS will 
-automatically use it.  Otherwise you can read netCDF-4 files by using 
-the java interface.  You will need the netcdf-java jar file from Unidata.
-Go to http://www.unidata.ucar.edu/software/netcdf-java/ and make sure
-you download version 4.1 or higher.  Add the jar file to your MATLAB
-path with 
+    You have MATLAB version R2010b or better.  If this is the case,
+    then you don't need to do anything, you are already set to go.
 
-        >> javaaddpath ( '/path/to/toolsUI-4.1.jar' );
+    If you have R2010a or earlier versions of MATLAB, then netCDF-4
+    support falls into one of two cases.  If you just need to read
+    netCDF-4 files, you can do that by enabling the java backend.
+    Go to http://www.unidata.ucar.edu/software/netcdf-java/ and make
+    sure you download version 4.2 or higher.  Add the jar file to
+    your MATLAB path with
 
-You should then set the needed preference to tell SNCTOOLS to default
-to java for netCDF-4 files
+        >> javaaddpath ( '/path/to/netcdfAll-4.2.jar' );
+
+    You should then set the needed preference to tell SNCTOOLS to
+    enable the java backend with
 
         >> setpref ( 'SNCTOOLS', 'USE_JAVA', true );
 
+    This also gives you read access to opendap data, so it's a good idea
+    whether you need netCDF-4 support or not.
 
-+-----------------------------------------------------------------------
-SNCTOOLS and HDF4
-
-Differences between the two formats as far as SNCTOOLS is concerned:
-1)  Creating a dimension will result in a coordinate variable being 
-    created as well.
+    And the last option is to compile a netcdf4-enabled mexnc mex-file.
+    If you do this, SNCTOOLS will automatically use it.  
 
 +-----------------------------------------------------------------------
 BUG Reports You Should Know About
