added updated external snctools + added fix for old matlab versions < 2006a: default to java for reading local netcdf files, writing of netcdf not possible though due to compatible mexnc.
svn path=/trunk/matlab/; revision=3301


Former-commit-id: 9fc9b119f68b1329de786a8f146de2dc443150aa

--- a/io/netcdf/snctools/ChangeLog
+++ b/io/netcdf/snctools/ChangeLog
@@ -1,3 +1,19 @@
+* Fri Nov 12 2010 John Evans <john.g.evans.ne@gmail.com> -r3302
+- Fixed bad example in NC_ADDVAR.
+- Fixed bug in NC_DUMP where deflate level wasn't being printed.
+
+* Fri Oct 30 2010 John Evans <john.g.evans.ne@gmail.com> -r3297
+- Abstracted out some backend handlers for NC_VARGET, NC_VARPUT,
+- NC_ATTGET, NC_ATTPUT into private directory.  Some code cleanup.
+- Improved deprecation language in unrecommended functions.
+- Fixed NC_ATTPUT, NC_ADDDIM examples.  
+- Added some examples to some less prominent functions.
+- Some readability improvements to various functions.
+- Some readability changes to testsuite output.
+
+* Mon Oct 25 2010 John Evans <john.g.evans.ne@gmail.com> -r3256
+- Added netcdf-java as read-only configuration.
+
 * Thu Oct 07 2010 John Evans <john.g.evans.ne@gmail.com> -r3244
 - Added opendap authentication.
 
