--- a/io/netcdf/mexnc/src/README
+++ b/io/netcdf/mexnc/src/README
@@ -7,9 +7,10 @@ If you need to compile mexnc, do the following.  On unix, you need
 to check the mexopts.{release}.sh file that is appropriate for you
 release.  On R2008b, this would be mexopts.R2008b.sh.  Go down to
 the bottom of the file and check that the variables are set
-appropriately (it should be pretty clear what to change).  If they
-are, then you can go ahead and build mexnc.  The form of the make
-command depends on your version of matlab as shown below.
+appropriately (it should be pretty clear what to change).  When you
+are done, then you can go ahead and build mexnc.  The form of the make
+command (done from the command prompt) depends on your version of matlab 
+as shown below.
 
     make           # R2008b only
     make R2008a    # R2008a only
