added latest updates of external snctools
svn path=/trunk/matlab/; revision=3838


Former-commit-id: 7346fe2f51fe61d1bf273723e3033349779c41b0

--- a/io/netcdf/snctools/ChangeLog
+++ b/io/netcdf/snctools/ChangeLog
@@ -1,31 +1,54 @@
+* Thu Jan 06 2011 John Evans <john.g.evans.ne@gmail.com> -r3478
+- java/http testing is now an opt-in.
+
+* Wed Jan 05 2011 John Evans <john.g.evans.ne@gmail.com> -r3476
+- Fixed empty HDF4 file bug with NC_DUMP.
+- HDF4 testing is now an opt-in.
+
+* Thu Dec 30 2010 John Evans <john.g.evans.ne@gmail.com> -r3467
+- Fixed missing R13 case in private/snc_write_backend
+
+* Fri Dec 24 2010 John Evans <john.g.evans.ne@gmail.com> -r3454
+- Remove private/nc_add_dimension.m as it is no longer called.
+- Was forgetting to close the file handle in NC_GETALL/tmw.
+- Fixed unclosed file handle issue in NC_ATTGET for enhanced
+-     model files.
+
+* Mon Dec 20 2010 John Evans <john.g.evans.ne@gmail.com> -r3442
+- fixed error in NC_ISUNLIMITEDVAR for HDF4 backend, pre 2007b.
+- Changing the HTTP URL used in the testing to UMaine one. 
+
+* Sat Dec 18 2010 John Evans <john.g.evans.ne@gmail.com> -r3432
+- No longer returning "Attnum" via netcdf or mexnc.  It's not important.
+- Attribute values returned via NC_INFO/java are now returned as rows, 
+-     same as tmw and mexnc.
+- Added opendap/local system-level test (thanks Gerben!)
+- Fixed hdf4 bug with NC_ADDRECS
+- Subsumed private/get_varinfo_tmw.m into private/nc_getvarinfo_tmw
+
 * Thu Dec 16 2010 John Evans <john.g.evans.ne@gmail.com> -r3409
 - Updated grib2 testing for netcdfAll-4.2.jar
 
 * Wed Dec 15 2010 John Evans <john.g.evans.ne@gmail.com> -r3407
 - Fixed bug in backend selection for writing.
 
-* Tue Dec 08 2010 John Evans <john.g.evans.ne@gmail.com> -r3396
-- More test suite cleanup.
-
 * Tue Nov 30 2010 John Evans <john.g.evans.ne@gmail.com> -r3368
 - Fixed preference bug in test suite.
 
 * Mon Nov 29 2010 John Evans <john.g.evans.ne@gmail.com> -r3367
 - Merged backend_testing branch into trunk, new test strategy.
-- Qualified on 9b, 10b, 9b with USE_MEXNC=true
 - Fixed bug in NC_DUMP where deflate information printed out
 -     on netcdf-3 files.
 - Updated README for new pre-R2008b instructions.
 
 * Wed Nov 24 2010 John Evans <john.g.evans.ne@gmail.com> -r3347
 - Qualified java read-only testing on R14.
-- Fixed on test file that was masquerading with wrong format.
+- Fixed one test file that was masquerading with wrong format.
 
 * Sun Nov 21 2010 John Evans <john.g.evans.ne@gmail.com> -r3344
 - Fixed HDF4 bug in NC_INFO where file had no datasets.
 - Forcing fill values to be the correct type when writing.  This
 -     is really only a problem with netcdf-3.
-- Removed testing for NC_CAT_A as it is seriously deprecated.
 - Tests updated for java read-only configuration on 6a, 7a, 8a.
 
 * Sat Nov 20 2010 John Evans <john.g.evans.ne@gmail.com> -r3328
@@ -36,13 +59,9 @@
 - Fixed bug in NC_DUMP where deflate level wasn't being printed.
 
 * Fri Oct 30 2010 John Evans <john.g.evans.ne@gmail.com> -r3297
-- Abstracted out some backend handlers for NC_VARGET, NC_VARPUT,
-- NC_ATTGET, NC_ATTPUT into private directory.  Some code cleanup.
 - Improved deprecation language in unrecommended functions.
 - Fixed NC_ATTPUT, NC_ADDDIM examples.  
 - Added some examples to some less prominent functions.
-- Some readability improvements to various functions.
-- Some readability changes to testsuite output.
 
 * Mon Oct 25 2010 John Evans <john.g.evans.ne@gmail.com> -r3256
 - Added netcdf-java as read-only configuration.
