--- a/io/netcdf/snctools/README
+++ b/io/netcdf/snctools/README
@@ -8,6 +8,8 @@ mexnc on your path in order for snctools to work.
 SNCTOOLS is only supported on R14 or higher.  It will not work on
 MATLAB versions below R14.
 
+If you have R13 or earlier and just need mexnc, then you should look at
+compiling mexnc yourself.  
 
 +-----------------------------------------------------------------------
 BASIC USAGE
@@ -63,7 +65,22 @@ USE_JAVA
     for reading OPeNDAP URLs, GRIB2 files, netCDF-4 files, and
     others), then this preference must be turned on.  First, go to
     http://www.unidata.ucar.edu/software/netcdf-java/ and make sure you
-    download version 4.2 or higher (on R14, you must use version 2.2.20).
+    retrieve the correct version...
+
+    If your version          Then you should download
+    of MATLAB is...          netcdf-java version...
+        R2010b                      4.2
+        R2010a                      4.1
+        R2009b                      4.1
+        R2009a                      4.1
+        R2008b                      4.1
+        R2008a                      4.1
+        R2007b                      4.1
+        R2007a                      4.1
+        R2006b                      4.1
+        R2006a                      4.1
+        R14                         2.2.20
+
     Add the jar file to your MATLAB path with
 
         >> javaaddpath ( '/path/to/netcdfAll-4.2.jar' );
@@ -122,7 +139,13 @@ BUG Reports You Should Know About
 
      http://www.mathworks.com/support/solutions/en/data/1-2Z4RS7/?solution=1-2Z4RS7
 
-2)  Empty Attributes
+2)  Segfaults on certain strided read operations.  
+
+    Affects versions R2008a and R2009a.  Please consult this URL.
+
+    http://www.mathworks.com/support/bugreports/522794
+
+3)  Empty Attributes
 
     MATLAB versions R2008b thru R2009b incorrectly disallowed the creation
     of empty attributes, which are quite clearly legal.  The bug is
@@ -131,7 +154,11 @@ BUG Reports You Should Know About
 
     http://www.mathworks.com/support/bugreports/609383
 
+4)  Out-of-memory error with negative indices.  Affects R2008b through
+    R20910a, but this only affects those who would use mexnc or the native
+    netcdf package directly, not snctools users.  Please consult this URL.
 
+    http://www.mathworks.com/support/bugreports/618322
 
 +-----------------------------------------------------------------------
 Of all the routines in this m-file collection, the most useful (in my
@@ -143,10 +170,3 @@ humble opinion) are as follows
     4. nc_attput    - writes a netcdf attribute
     6. nc_dump      - prints netcdf metadata
 
-There is a subdirectory called "tests" which has routines that test
-the m-files of SNCTOOLS.  You really don't need to worry about this
-unless you are convinced that there is something wrong with one of
-the m-files.  In that case, you can run the test suite by changing
-directories into "tests" and running "test_snctools" from the matlab
-command line.   You should not run the test suite unless you have matlab
-version 2007b or later.
