updated external snctools toolbox, was needed due to error in calling netcdf.inqFormat. speed now doubled with new persistent getpref. made non-canonical fixes in snc_read_backend, nc_getdiminfo_java, nc_varget_tmw (handle case when missingvalue is NaN itself). tested all on R009b
svn path=/trunk/matlab/; revision=4896


Former-commit-id: 70b6b3559620068f6436703c4bf605949f3061ea

--- a/io/netcdf/snctools/ChangeLog
+++ b/io/netcdf/snctools/ChangeLog
@@ -1,3 +1,22 @@
+* July 21 2011 John Evans <john.g.evans.ne@gmail.com> -r3609
+- Tentatively abstracting out GETPREF on PRESERVE_FVD to being mostly a
+- persistent variable operation.  Nearly doubles the speed.
+
+* July 06 2011 John Evans <john.g.evans.ne@gmail.com> -r3603
+- Added test check as to whether we can find SNCTOOLS, MEXNC.
+
+* July 03 2011 John Evans <john.g.evans.ne@gmail.com> -r3599
+- Properly erroring out if NC_VARRENAME used with HDF4.
+
+* June 24 2011 John Evans <john.g.evans.ne@gmail.com> -r3597
+- Fixed incorrect usage of inqFormat in NC_ATTPUT_TMW.
+
+* June 23 2011 John Evans <john.g.evans.ne@gmail.com> -r3595
+- Removed some test dependencies on error IDs.
+- Added 2011a HDF4 backend for NC_INFO routine.
+- Fixed bad parameter to an ERROR call.
+- Removed newlines from private hdf4 routine ERROR call sites.
+
 * June 17 2011 John Evans <john.g.evans.ne@gmail.com> -r3583
 - Moved mexnc and hdf4 NC_ADDVAR backends into private directory.
 - Fix for bad fill value handling on netcdf-4.  Improves interoperability.
