solved issue for password protected OPeNDAP urls
svn path=/trunk/matlab/; revision=5764


Former-commit-id: 6b58c8b2195c2c78235efa0fdab292fdd05ff728

--- a/io/netcdf/snctools/ChangeLog
+++ b/io/netcdf/snctools/ChangeLog
@@ -1,3 +1,7 @@
+* February 09 2012 John Evans <john.g.evans.ne@gmail.com> -r3963
+- Fixed snctools for change in netcdf-java authentication.
+- Updated README for clearer netcdf-java requirements.
+
 * January 12 2012 John Evans <john.g.evans.ne@gmail.com> -r3958
 - No support for HDF4 on R14.
 - Updated the README for official HDF4 stance.
